--- a/html/q2.html
+++ b/html/q2.html
@@ -20,7 +20,7 @@
     <label for="email">Email: </label>
     <input type="email" id="email" value="email" required>
     <label for="password">Password: </label>
-    <input type="text" id="password" value="password" minlength="5" maxlength="10" required>
+    <input type="text" id="password" value="password" pattern=".{5,10}" required title="5 to 10 characters">
 
     <br>
 
